# pattern-forge

./: .gitignore  .mcp.json  README.md  pyproject.toml
docs/: architecture.md  roadmap.md  skirt-blueprint.md  trousers-blueprint.md
examples/: _bodies.py  export_skirt.py  export_trousers.py  generate_skirt.py  layout_repro.py  layout_repro2.py  make_validation_pack.py  open_gui.py  simulate_ai_workflow.py
src/pattern_forge/: __init__.py  config.py  mcp_server.py  seamly_cli.py  xmlio.py
src/pattern_forge/recipes/: __init__.py  aline_skirt.py  base.py  components.py  skirt.py  trousers.py
src/pattern_forge/schemas/pattern/: v0.6.8.xsd
src/pattern_forge/sm2d/: __init__.py  document.py
src/pattern_forge/smis/: __init__.py  writer.py
src/pattern_forge/validators/: __init__.py  xsd.py
tests/: conftest.py  test_clients.py  test_config.py  test_mcp_tools.py  test_recipe_skirt.py  test_recipe_skirt_full.py  test_recipe_trousers.py  test_seamly_cli.py  test_sm2d_writer.py  test_smis_writer.py
tests/data/: generated_trousers_avg_man.sm2d  trousers.sm2d
